# Task_User_Creation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
flask_task/: app_build.py  server.py
flask_task/api/: models.py  route_handler.py
flask_task/templates/layouts/: base.html  index.html
flask_task/templates/pages/: dashboard.html  index.html  login.html
flask_task/utils/: constants.py  environment.py
instance/: sites.db
